# pg_vectorize

./: .gitignore  404.html  Cargo.toml  INSTALLATION.md  Makefile  README.md  docker-compose.server.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: build-ollama-serve.yml  build-vector-serve.yml  docs.yml  extension_ci.yml  extension_upgrade.yml  pg-image-build.yml  pgxn-release.yml  proxy_ci.yml  server_ci.yml  server_release.yml
core/: Cargo.toml
core/src/: cache.rs  config.rs  db.rs  errors.rs  guc.rs  init.rs  lib.rs  query.rs  types.rs
core/src/transformers/: generic.rs
core/src/transformers/providers/: cohere.rs  mod.rs  ollama.rs  openai.rs  vector_serve.rs  voyage.rs
docs/extension/: index.md
docs/server/api/: search.md
extension/: Cargo.toml  Makefile  README.md  index.html
extension/api/: index.html
extension/api/rag/: index.html
extension/api/search/: index.html
extension/api/utilities/: index.html
extension/configuration/: index.html
extension/examples/openai_embeddings/: index.html
extension/examples/scheduling/: index.html
extension/examples/sentence_transformers/: index.html
extension/models/: index.html
extension/sql/: meta.sql
extension/src/: api.rs  executor.rs  guc.rs  init.rs  job.rs  search.rs  types.rs  util.rs
extension/src/chat/: ops.rs
extension/src/transformers/: generic.rs  http_handler.rs  mod.rs  openai.rs
extension/src/workers/: mod.rs  pg_bgw.rs
extension/tests/: util.rs
images/vectorize-pg/: Dockerfile
proxy/: Cargo.toml  README.md
proxy/src/: cache.rs  embeddings.rs  lib.rs  main.rs  message_parser.rs  protocol.rs  proxy.rs
proxy/tests/: proxy.rs
search/: search_index.json
server/: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  index.html
server/.sqlx/: query-2fc618887954eee57adc9505363ad78c22c3c6c9f4605c59159a0a6f5d3c32d6.json
server/api/search/: index.html
server/api/table/: index.html
server/migrations/: 0001_init_job_table.sql  0002_add_bm25_enabled.sql
server/sql/: example.sql
server/src/: app_state.rs  bm25.rs  cache.rs  config.rs  db.rs  errors.rs  executor.rs  init.rs  lib.rs  main.rs  server.rs
server/src/core/: errors.rs  guc.rs  mod.rs  query.rs  types.rs
server/src/core/transformers/: generic.rs  http_handler.rs
server/src/core/transformers/providers/: cohere.rs  mod.rs  ollama.rs  openai.rs  portkey.rs  vector_serve.rs  voyage.rs
server/src/core/worker/: base.rs  ops.rs
server/src/routes/: health.rs  mod.rs  search.rs  table.rs
server/tests/: tests.rs  util.rs
vector-serve/: Dockerfile  Makefile  pyproject.toml
vector-serve/app/: app.py  models.py
vector-serve/tests/: test_endpoints.py
worker/: Cargo.toml
worker/src/: executor.rs  health.rs  lib.rs  ops.rs
