[workspace]
members = [
    "server"
    ,"core"
    ,"worker"
]
resolver = "2"
exclude = [
    "extension"
]

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bytes = "1.10.1"
chrono = {version = "0.4.41", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
env = "1.0.1"
env_logger = "0.11"
fallible-iterator = "0.3.0"
futures = "0.3.31"
lazy_static = "1.5.0"
log = "0.4"
ollama-rs = "=0.2.1"
pgmq = "0.30.1"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.16", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0"
sqlparser = "0.51"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
thiserror = "2.0.12"
tiktoken-rs = "0.7.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.2"
utoipa = { version = "4", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui  = { version = "7", features = ["actix-web"] }
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }