[project]
name = "pg-vectorize"
version = "0.1.0"
description = "Dependencies for MkDocs"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
	"markdown-include>=0.8.1,<0.9.0",
	"mkdocs>=1.6,<2.0",
	"mkdocs-material>=9,<10.0",
	"mdx-include>=1.4.1,<2.0",
	"mkdocs-markdownextradata-plugin>=0.2.6,<1.0",
	"mkdocstrings>=0.30.1,<1.0",
	"MarkupSafe==3.0.3",
	"Jinja2>3",
	"pymdown-extensions>=10,<11.0",
]
