[package]
name = "vectorize-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
env_logger = { workspace = true}
anyhow = "1.0.98"
async-trait = "0.1.88"
bytes = "1.10.1"
chrono = {version = "0.4.41", features = ["serde"] }
env = "1.0.1"
futures = "0.3.31"
lazy_static = "1.5.0"
log = "0.4"
ollama-rs = "=0.2.1"
pgmq = "0.30.1"
pgwire = { version = "0.30", features = ["server-api-aws-lc-rs"] }
postgres-protocol = "0.6.8"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.16", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0"
sqlparser = "0.51"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
thiserror = "2.0.12"
tiktoken-rs = "0.7.0"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
url = "2.2"
utoipa = "5.3.1"
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
