[package]
name = "vectorize-server"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "vectorize_server"
path = "src/lib.rs"


[dependencies]
vectorize_core = { package = "vectorize-core", path = "../core" }
vectorize_worker = { package = "vectorize-worker", path = "../worker" }
vectorize_proxy = { package = "vectorize-proxy", path = "../proxy" }

actix-cors = "0.7.1"
actix-http = "3.11.0"
actix-rt = "2.10.0"
actix-service = "2.0.3"
actix-web = "4.11.0"
anyhow = "1.0.98"
async-trait = "0.1.88"
bytes = "1.10.1"
chrono = {version = "0.4.41", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
env = "1.0.1"
env_logger = "0.11"
fallible-iterator = "0.3.0"
futures = "0.3.31"
lazy_static = "1.5.0"
log = "0.4"
ollama-rs = "=0.2.1"
pgmq = "0.30.1"
pgwire = { version = "0.30", features = ["server-api-aws-lc-rs"] }
postgres-protocol = "0.6.8"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.16", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0"
sqlparser = "0.51"
sqlx = { workspace = true}
thiserror = "2.0.12"
tiktoken-rs = "0.7.0"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
tracing-subscriber = "0.3"
url = "2.2"
utoipa = { version = "4", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui  = { version = "7", features = ["actix-web"] }
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }

[dev-dependencies]
pgvector = { version = "0.4.1", features = ["postgres", "sqlx"] }
